--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,8 +16,8 @@ jobs:
           with:
             fetch-depth: 0
 
-        - name: Commit Message
-          run: .github/lint-commit-message.sh
+        #- name: Commit Message
+        #  run: .github/lint-commit-message.sh
 
         - name: File names
           run: .github/lint-filename.sh
